# hobo-rover

./: .gitignore  .gitmodules  README.md
mavic-fw/: CMakeLists.txt  README.md  mavic-fw.cpp
mavic-fw/cmake/: avr-gcc.toolchain.cmake
mavic-fw/inc/: led-beacon.hpp  mavic-constants.hpp  mavic-utils.hpp  port-beacon.hpp  uart-stdio.hpp
mavic-fw/inc/os-config/: scmRTOS_CONFIG.h  scmRTOS_TARGET_CFG.h  start-os.hpp
mavic-fw/optiboot/: README.md
mavic-fw/src/: led-beacon.cpp  port-beacon.cpp  uart-stdio.cpp
mavic-fw/src/os-config/: start-os.cpp
mavic-fw/src/os-processes/: dummy-print-proc.cpp  led-beacon-proc.cpp
